# ef_mystery_houers

./: config.py  main.py  pyproject.toml
libs/: __init__.py  database.py  ms_graph.py
modules/: __init__.py  generate_zip.py  mystery.py  onedrive_upload.py  send_email.py  structure.py
temp/: T-Mobile_MS_Podsum_INB_2026_02_25_16_14.xlsx  TM_MS_Godziny_Podsum_operac_2026_02_25_16_14.xlsx
utils/: __init__.py  debug.py  error_handler.py  logger.py
