[project]
name = "ef-mystery-houers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "msal>=1.34.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "xlsxwriter>=3.2.9",
    "pyzipper>=0.3.6",
]
